--- a/client/index.html
+++ b/client/index.html
@@ -6,35 +6,22 @@
   <link rel="icon" type="image/png" href="/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Loan Guru</title>
+  <title>Credaro</title>
 
   <!-- Meta Description for SEO -->
-  <meta name="description"
-    content="Make your loan application process smooth, fast, and stress-free. Professional loan consultants specializing in PMEGP, MUDRA Tarun, MSME Loans, Business Loans, and more. Transparency, integrity, and results you can trust." />
+ <meta name="description"
+  content="Credaro transforms the financial strength of MSMEs and growing businesses in India. We engineer your company’s financials to improve loan eligibility and secure the best funding options, including MSME loans, business loans, and growth capital. Expert support, transparent process, and real results." />
 
   <!-- Theme color for browser UI -->
-  <meta name="theme-color" content="#3d9159" />
+  <meta name="theme-color" content="#05075a" />
 
-  <!-- Google Tag Manager -->
-  <script>(function (w, d, s, l, i) {
-      w[l] = w[l] || []; w[l].push({
-        'gtm.start':
-          new Date().getTime(), event: 'gtm.js'
-      }); var f = d.getElementsByTagName(s)[0],
-        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
-          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-556LVDMF');</script>
-  <!-- End Google Tag Manager -->
+
 
 
 </head>
 
 <body>
   
-  <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-556LVDMF" height="0" width="0"
-      style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
 
 
 
